# cosytts

./: .gitignore  README.md  pyproject.toml  run_fast.py  run_offline.py
api/: Dockerfile  __init__.py  docker-compose.streaming.yml  nginx.conf  requirements.txt  run.py  server.py  streaming_tts_server.py
api/controllers/: __init__.py  tts_controller.py
api/routers/: health.py  tts.py
api/schemas/: tts.py
api/services/: __init__.py  streaming.py  trimming.py
cosyvoice/cli/: cosyvoice.py  model.py
cosyvoice/llm/: llm.py
cosyvoice/utils/: frontend_utils.py
debug/: README.md
deploy/: _stream_test_output.pcm  config.json  deploy.ps1  remote_bootstrap.sh  test_streaming.py
fastcosyvoice/: cosyvoice.py  model.py
refs/: 16s.txt  30s.txt
runtime/triton_trtllm/: README.md  docker-compose.streaming.yml  docker-compose.yml  offline_inference.py  requirements.txt  run.sh  streaming_tts_server.py
voices/: polina.txt
