[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcosyvoice"
version = "0.1.0"
description = "Faster inference for CoxyVoice3"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.36.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.2",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matcha-tts>=0.0.7.2",
    "modelscope>=1.33.0",
    "numpy<2.0",
    "omegaconf>=2.3.0",
    "onnx==1.19.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "openai-whisper>=20250625",
    "pyworld>=0.3.5",
    "silero-stress>=1.3",
    "tensorrt-cu12>=10.11.0.33",
    "tensorrt-llm>=1.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchcodec>=0.9.1",
    "transformers>=4.53.1",
    "wetext>=0.1.2",
    "wget>=3.2",
    "x-transformers>=2.11.24",
    # Original deps
    #
    # "conformer>=0.3.2",
    # "deepspeed>=0.15.1",
    # "diffusers>=0.29.0",
    # #"fastapi>=0.115.6",
    # #"fastapi-cli>=0.0.4",
    # "gdown>=5.1.0",
    # "gradio>=5.4.0",
    # "grpcio>=1.57.0",
    # "grpcio-tools>=1.57.0",
    # "hydra-core>=1.3.2",
    # "hyperpyyaml>=1.2.2",
    # "inflect>=7.3.1",
    # "librosa>=0.10.2",
    # "lightning>=2.2.4",
    # "matplotlib>=3.7.5",
    # "modelscope>=1.20.0",
    # "networkx>=3.1",
    # "omegaconf>=2.3.0",
    # "onnxruntime>=1.18.0",
    # "onnxruntime-gpu>=1.23.2",
    # "openai-whisper>=20231117",
    # "protobuf>=4.25",
    # "pyarrow>=18.1.0",
    # "pydantic>=2.7.0",
    # "pyworld>=0.3.4",
    # "rich>=13.7.1",
    # "soundfile>=0.12.1",
    # "tensorrt-cu12>=10.13.3.9",
    # "tensorrt-cu12-bindings>=10.13.3.9",
    # "tensorrt-cu12-libs>=10.13.3.9",
    # "torch>=2.3.1",
    # "torchaudio>=2.3.1",
    # "torchcodec>=0.9.1",
    # "transformers>=4.51.3",
    # #"uvicorn>=0.30.0",
    # #"vllm>=0.11.2",
    # "wetext>=0.0.4",
    # "wget>=3.2",
    # "x-transformers>=2.11.24",
]

[tool.hatch.build.targets.wheel]
packages = ["cosyvoice", "fastcosyvoice"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
